--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,13 @@ typings/
 # dotenv environment variables file
 .env
 
+# OS metadata
+.DS_Store
+Thumbs.db
+
+# Ignore built ts files
+dist/**/*
+
+# Editors
+.idea
+*.iml
